--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -378,7 +378,7 @@ jobs:
         set -o nounset
         set -o pipefail
 
-        kubectl create ns cartographer-system
+        kubectl create ns conventions-system
         kapp deploy -a cartographer-conventions-controller -y \
           -f <( \
             ytt -f dist/package-install.yaml -f dist/package-install.values.yaml \
@@ -387,7 +387,7 @@ jobs:
           )
 
         kapp delete -a cartographer-conventions-controller --wait-timeout 5m -y
-        kubectl delete ns cartographer-system
+        kubectl delete ns conventions-system
 
     - name: Deploy Cartographer Conventions
       run: |
@@ -484,7 +484,7 @@ jobs:
           kubectl logs -n kapp-controller -l app=kapp-controller -c kapp-controller --tail 1000
         echo "##[endgroup]"
         echo "##[group]Cartographer Conventions logs"
-          kubectl logs -n cartographer-system -l component=conventions.carto.run,control-plane=controller-manager -c manager --tail 1000
+          kubectl logs -n conventions-system -l component=conventions.carto.run,control-plane=controller-manager -c manager --tail 1000
         echo "##[endgroup]"
         echo "##[group]Convention Server deployment"
           kubectl describe deployment webhook -n sample-conventions
