--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,8 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version-file: "go.mod"
+    - name: Go mod tidy
+      run: make tidy
     - name: Test
       run: make test
     - uses: codecov/codecov-action@v5
@@ -191,10 +193,12 @@ jobs:
         k8s:
         - 1.25.11
         - 1.26.6
-        - 1.27.3
-        - 1.28.0
-        - 1.29.0
-        - 1.30.0
+        - 1.27.16
+        - 1.28.15
+        - 1.29.12
+        - 1.30.8
+        - 1.31.4
+        - 1.32.0
     env:
       REGISTRY_NAME: registry.local
       BUNDLE: registry.local/conventions/bundle
