--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,9 @@ on:
     - 'v[0-9]+\.[0-9]+\.[0-9]+-?**'
   pull_request: {}
 
+permissions:
+  contents: write
+
 jobs:
 
   unit:
@@ -709,6 +712,14 @@ jobs:
     - name: Get the version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+    - name: Create and push new tag
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git tag webhook/${{ steps.get_version.outputs.VERSION }}
+        git push origin webhook/${{ steps.get_version.outputs.VERSION }}
     - name: Draft release
       id: create_release
       uses: actions/create-release@v1.1.4
