chore: Validating PodTemplateSpec with duplicate env keys
Signed-off-by: Rashed Kamal <rashed.kamal@broadcom.com>

--- a/samples/convention-server/workload.yaml
+++ b/samples/convention-server/workload.yaml
@@ -9,3 +9,8 @@ spec:
       containers:
       - name: workload
         image: ubuntu
+        env:
+          - name: test
+            value: test-value
+          - name: test
+            value: test-value
