--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -707,6 +707,10 @@ jobs:
     - test
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
     steps:
     - uses: actions/checkout@v4
     - name: Get the version
