--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -708,7 +708,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
       id-token: write
     steps:
